# EDIpack2.0

./: .buildinfo  .gitignore  CMakeLists.txt  README.md  browsecode.html  dependencies.html  edipack.html  edipack2.html  edipack2_cbinding.html  edipack2_python.html  edipack2ineq.html  edipack2triqs.html  edipack_cbindings.html  edipack_python.html  edipy2.html  examples.html  f-modindex.html  genindex.html  index.html  installation.html  meson.build  objects.inv  pyproject.toml  quickstart.html  search.html  searchindex.js  structure.html
.doctrees/: browsecode.doctree  dependencies.doctree  edipack.doctree  edipack2.doctree  edipack2_cbinding.doctree  edipack2_python.doctree  edipack2ineq.doctree  edipack2triqs.doctree  edipack_cbindings.doctree  edipack_python.doctree  edipy2.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  quickstart.doctree  structure.doctree
.doctrees/c_bindings/: 01_vars.doctree  02_funcs.doctree
.doctrees/edipack/: 01_edipackmodule.doctree  02_main.doctree  05_sectors.doctree  06_bath.doctree  07_hamiltonian.doctree  08_diag.doctree  09_greensfunctions.doctree  10_chifunctions.doctree  11_observables.doctree  12_rdm.doctree  13_io.doctree  14_fit.doctree
.doctrees/edipack2/: 01_edipackmodule.doctree  02_main.doctree  05_sectors.doctree  06_bath.doctree  07_hamiltonian.doctree  08_diag.doctree  09_greensfunctions.doctree  10_chifunctions.doctree  11_observables.doctree  12_rdm.doctree  13_io.doctree  14_fit.doctree
.doctrees/edipack2ineq/: 01_edipack2ineqmodule.doctree  02_main.doctree  04_bath.doctree  05_io.doctree  06_fit.doctree
.doctrees/examples/: 01_bhz.doctree  02_ahm.doctree  03_excBHZ.doctree
.doctrees/python_api/: basicusage.doctree  functions.doctree  globvars.doctree  pyinstallation.doctree
.doctrees/quickstart/: 01_anderson.doctree  02_dmft.doctree
.doctrees/structure/: bath.doctree  diag.doctree  ed_sector.doctree  edipackmodule.doctree  fit.doctree  greensfunctions.doctree  index_diag.doctree  index_greensfunctions.doctree  index_hamiltonian.doctree  index_observables.doctree  index_rdm.doctree  main.doctree  observables.doctree  rdm.doctree
.github/workflows/: PushWorkflow.yml  documentation.yml
_downloads/e79bd7b9bd995ebd3d503a2815ab4132/: 01_bhz.f90
_modules/: func_aux_funx.html  func_bath.html  func_bath_fit.html  func_io.html  func_main.html  func_read_input.html  index.html
_modules/edipy2/: edi2py.html
_sources/: browsecode.rst.txt  dependencies.rst.txt  edipack.rst.txt  edipack2_cbinding.rst.txt  edipack2ineq.rst.txt  edipack_cbindings.rst.txt  edipack_python.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  quickstart.rst.txt  structure.rst.txt
_sources/c_bindings/: 01_vars.rst.txt  02_funcs.rst.txt
_sources/edipack/: 02_main.rst.txt  05_sectors.rst.txt  06_bath.rst.txt  11_observables.rst.txt  13_io.rst.txt
_sources/edipack2/: 07_hamiltonian.rst.txt
_sources/edipack2ineq/: 01_edipack2ineqmodule.rst.txt  02_main.rst.txt  04_bath.rst.txt  05_io.rst.txt
_sources/examples/: 01_bhz.rst.txt  02_ahm.rst.txt  03_excBHZ.rst.txt
_sources/python_api/: pyinstallation.rst.txt
_sources/quickstart/: 01_anderson.rst.txt
_static/css/: custom.css
browsesource/module/: e2i_aux_funx.html  e2i_bath.html  e2i_bath_fit.html  e2i_bath_replica.html  e2i_bath_user.html  e2i_io.html  e2i_main.html  e2i_vars_global.html  ed_aux_funx.html  ed_bath.html  ed_bath_aux.html  (+65 more)
c_bindings/: 01_vars.html  02_funcs.html  CMakeLists.txt  COMMON.f90  EDIPACK2INEQ2PY.f90  EDIPACK2INEQ_C.f90  EDIPACK2PY.f90  EDIPACK2_C.f90
cmake/: ConfigUninstall.cmake  DistClean.cmake  FortranCompilerConfig.cmake  MainConfig.cmake  PostConfig.cmake
doc/: Doxyfile.in  conf.py  edi2py.rst  edipack2.rst  edipack2_cbinding.rst  edipack2_python.rst  edipack2ineq.rst  edipack2ineq2py.rst  edipack2py.rst  edipack_cbinding.rst  edipack_python.rst  examples.rst  index.rst  installation.rst  quickstart.rst  structure.rst
edipack/: 01_edipackmodule.html  02_main.html  05_sectors.html  06_bath.html  07_hamiltonian.html  08_diag.html  09_greensfunctions.html  10_chifunctions.html  11_observables.html  12_rdm.html  13_io.html  14_fit.html
edipack2/: 01_edipackmodule.html  02_main.html  05_sectors.html  06_bath.html  07_hamiltonian.html  08_diag.html  09_greensfunctions.html  10_chifunctions.html  11_observables.html  12_rdm.html  13_io.html  14_fit.html
edipack2ineq/: 01_edipack2ineqmodule.html  02_main.html  04_bath.html  05_io.html  06_fit.html
etc/: edipack.pc.in  edipack2.pc.in  edipack2_cbinding.pc.in  edipack2ineq.pc.in  edipack2ineq2py.pc.in  edipack2ineq_cbinding.pc.in  edipack2py.pc.in  edipack_cbindings.pc.in
examples/: 01_bhz.html  02_ahm.html  03_excBHZ.html
ineq/: CMakeLists.txt  E2I_AUX_FUNX.f90  E2I_VARS_GLOBAL.f90
python_api/: basicusage.html  functions.html  globvars.html  pyinstallation.html
quickstart/: 01_anderson.html  02_dmft.html
src/: ED_AUX_FUNX.f90  ED_CHI_FUNCTIONS.f90  ED_GREENS_FUNCTIONS.f90  ED_INPUT_VARS.f90  ED_MAIN.f90  ED_RDM.f90  ED_SETUP.f90  ED_VARS_GLOBAL.f90
src/c_bindings/: CMakeLists.txt  EDIPACK2_C.f90  EDIPACK2_C_COMMON.f90  EDIPACK_C.f90  EDIPACK_C_COMMON.f90  edipack2_cbinding.h  edipack2_cbinding.h.in  edipack_cbindings.h
src/c_bindings/edipack/: edipack_c_bindings_bath.f90  edipack_c_bindings_io.f90  edipack_c_bindings_main.f90  edipack_c_bindings_parse_umatrix.f90
src/c_bindings/edipack2/: edipack_c_binding_aux_funx.f90  edipack_c_binding_main.f90  edipack_c_binding_parse_umatrix.f90
src/c_bindings/edipack2ineq/: edipack2ineq_c_binding_bath.f90  edipack2ineq_c_binding_read_input.f90  edipack2ineq_c_bindings_aux_funx.f90  edipack2ineq_c_bindings_io.f90  edipack2ineq_c_bindings_main.f90
src/c_bindings/test/: Makefile  hm_bethe.cpp  inputED.conf
structure/: bath.html  diag.html  ed_sector.html  edipackmodule.html  fit.html  greensfunctions.html  index_diag.html  index_greensfunctions.html  index_hamiltonian.html  index_observables.html  index_rdm.html  main.html  observables.html  rdm.html
test/: Makefile  README.md  test.sh
(+1186 files in other folders)
